--- a/app.html
+++ b/app.html
@@ -52,8 +52,37 @@
     </nav>
     <!-- ==== Main Section === -->
     <main class="flex-shrink-0">
-        <div class="container">
+        <div class="container mt-4">
+            <div class="row">
+                <div class="col">
+                    <h2>Loan Calculator</h2>
+                    <form>
+                        <label>Loan amount</label>
+                        <input id="loandAmount" type="number" class="form-control" placeholder="Loan Amount"
+                            aria-label="Loan amount">
+                        <label class="mt-2">Payments</label>
+                        <input id="payments" type="number" class="form-control" placeholder="Payments"
+                            aria-label="Payments">
+                        <label class="mt-2">Rate</label>
+                        <input id="rate" type="number" class="form-control" placeholder="Rate" aria-label="Rate">
+                        <div class="d-flex justify-content-end">
+                            <button type="button" class="btn btn-primary mt-2">Calculate</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col">
+                    <div class="row text-center">
+                        <h5 class="text-center font-italic">Your Monthly Payments</h5>
+                        <h1>$number</h1>
+                    </div>
+                    <div class="row">
 
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                result
+            </div>
         </div>
     </main>
     <!-- ==== Footer Section === -->
@@ -68,12 +97,15 @@
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+                        </div>
+                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+                        </div>
+                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>        
+            </div>
         </div>
     </footer>
     <!-- Bootstrap JS -->
