--- a/app.html
+++ b/app.html
@@ -56,32 +56,57 @@
             <div class="row">
                 <div class="col">
                     <h2>Loan Calculator</h2>
-                    <form>
+                    <form class="bg-light p-2 border-rounded">
                         <label>Loan amount</label>
-                        <input id="loandAmount" type="number" class="form-control" placeholder="Loan Amount"
-                            aria-label="Loan amount">
+                        <input id="loanAmount" type="number" class="form-control" placeholder="Loan Amount"
+                            aria-label="Loan amount" value=25000>
                         <label class="mt-2">Payments</label>
                         <input id="payments" type="number" class="form-control" placeholder="Payments"
-                            aria-label="Payments">
+                            aria-label="Payments" value=60>
                         <label class="mt-2">Rate</label>
-                        <input id="rate" type="number" class="form-control" placeholder="Rate" aria-label="Rate">
+                        <input id="rate" type="number" class="form-control" placeholder="Rate" aria-label="Rate"
+                            value=5>
                         <div class="d-flex justify-content-end">
-                            <button type="button" class="btn btn-primary mt-2">Calculate</button>
+                            <button id="btnSubmit" type="button" class="btn btn-primary mt-2">Calculate</button>
                         </div>
                     </form>
                 </div>
                 <div class="col">
-                    <div class="row text-center">
-                        <h5 class="text-center font-italic">Your Monthly Payments</h5>
-                        <h1>$number</h1>
+                    <div class="row text-center pb-5">
+                        <h5 class="text-center font-italic">Your Monthly Payment</h5>
+                        <h1 id="yourMonthlyPayment">$ ###</h1>
                     </div>
-                    <div class="row">
-
+                    <div class="row mt-5">
+                        <div class='col totalDetails'>
+                            <h5>Total Principal</h5>
+                            <h5>Total Interest</h5>
+                            <h5>Total Cost</h5>
+                        </div>
+                        <div class='col'>
+                            <h5 class="text-right">$_____</h5>
+                            <h5>$_____</h5>
+                            <h5>$_____</h5>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                result
+            <div class="row mt-3">
+                <table class="table table-striped table-bordered table-hover">
+                    <thead class="thead-light">
+                        <tr>
+                            <th>Month</th>
+                            <th>Monthly Payment</th>
+                            <th>Principal</th>
+                            <th>Interest</th>
+                            <th>Total interest</th>
+                            <th>Balance</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tableResults">
+
+                    </tbody>
+
+                </table>
             </div>
         </div>
     </main>
@@ -108,6 +133,16 @@
             </div>
         </div>
     </footer>
+    <template id="templateRow">
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </template>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
@@ -116,6 +151,9 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
     <script src="js/site.js"></script>
+    <script>
+        document.getElementById("btnSubmit").addEventListener("click", getValue)
+    </script>
 </body>
 
 </html>
