Updated site.js, app.html, and code.html

--- a/app.html
+++ b/app.html
@@ -76,16 +76,16 @@
                         <h5 class="text-center font-italic">Your Monthly Payment</h5>
                         <h1 id="yourMonthlyPayment">$ ###</h1>
                     </div>
-                    <div class="row mt-5">
-                        <div class='col totalDetails'>
-                            <h5>Total Principal</h5>
-                            <h5>Total Interest</h5>
-                            <h5>Total Cost</h5>
+                    <div class="row mt-3">
+                        <div class='col'>
+                            <h5 class="text-center">Total Principal</h5>
+                            <h5 class="text-center">Total Interest</h5>
+                            <h5 class="text-center">Total Cost</h5>
                         </div>
                         <div class='col'>
-                            <h5 class="text-right">$_____</h5>
-                            <h5>$_____</h5>
-                            <h5>$_____</h5>
+                            <h5 id="totalPrincipal" class="text-center">$___________</h5>
+                            <h5 id="totalInterest" class="text-center">$___________</h5>
+                            <h5 id="totalCost" class="text-center">$___________</h5>
                         </div>
                     </div>
                 </div>
